am-formatting-1 - Fixing issues causing build errors

--- a/downstream/assemblies/platform/assembly-gw-config-authentication-type.adoc
+++ b/downstream/assemblies/platform/assembly-gw-config-authentication-type.adoc
@@ -2,11 +2,9 @@ ifdef::context[:parent-context: {context}]
 
 :_mod-docs-content-type: ASSEMBLY
 
-[id="gw-config-authentication-type_{context}"]
+[id="gw-config-authentication-type"]
 
 = Configuring authentication in the {PlatformNameShort}
-
-:context: gw-auth-type
 
 Ansible Automation Platform provides multiple authenticator plugins that you can configure to simplify the login experience for your organization. These are the authenticator plugins that are provided:
 * xref:gw-local-authentication[Local] 
@@ -19,7 +17,7 @@ Ansible Automation Platform provides multiple authenticator plugins that you can
 * xref:controller-set-up-generic-oidc[Generic OIDC]
 * xref:gw-config-keycloak-settings[Keycloak]
 * xref:proc-controller-github-settings[GitHub]
-* xref:proc-controller-github-organization-setttings[GitHub organization]
+* xref:proc-controller-github-organization-settings[GitHub organization]
 * xref:proc-controller-github-team-settings[GitHub team]
 * xref:proc-controller-github-enterprise-settings[GitHub enterprise]
 * xref:proc-controller-github-enterprise-org-settings[GitHub enterprise organization]
