--- a/downstream/assemblies/platform/assembly-gw-managing-access.adoc
+++ b/downstream/assemblies/platform/assembly-gw-managing-access.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 
-[id="gw-managing-access_{context}"]
+[id="gw-managing-access"]
 
 = Managing access with role based access control
 
