--- a/downstream/assemblies/platform/assembly-gw-managing-authentication.adoc
+++ b/downstream/assemblies/platform/assembly-gw-managing-authentication.adoc
@@ -2,11 +2,9 @@ ifdef::context[:parent-context: {context}]
 
 :_mod-docs-content-type: ASSEMBLY
 
-[id="gw-managing-authentication_{context}"]
+[id="gw-managing-authentication"]
 
 = Managing authentication in {PlatformNameShort}
-
-:context: gw-manage-auth
 
 After you have configured your authentication settings, you can view a list of authenticators, search, sort and view the details for each authenticator configured on the system.
 
