--- a/downstream/modules/platform/con-gw-dash-components.adoc
+++ b/downstream/modules/platform/con-gw-dash-components.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: CONCEPT
 
-[id="gw-dash-components_{context}"]
+[id="gw-dash-components"]
 
 = {PlatformNameShort} dashboard components
 
