--- a/downstream/modules/platform/con-gw-dash-features.adoc
+++ b/downstream/modules/platform/con-gw-dash-features.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: CONCEPT
 
-[id="con-gw-dash-features_{context}"]
+[id="con-gw-dash-features"]
 
 = {PlatformNameShort} dashboard features
 
