--- a/downstream/modules/platform/con-gw-overview-access-auth.adoc
+++ b/downstream/modules/platform/con-gw-overview-access-auth.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: CONCEPT
 
-[id="gw-overview-access-auth_{context}"]
+[id="gw-overview-access-auth"]
 
 = Overview of access management and authentication
 
