--- a/downstream/modules/platform/con-gw-pluggable-authentication.adoc
+++ b/downstream/modules/platform/con-gw-pluggable-authentication.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: CONCEPT
 
-[id="gw-pluggable-authentication_{context}"]
+[id="gw-pluggable-authentication"]
 
 = Pluggable authentication
 
