--- a/downstream/modules/platform/proc-gw-add-admin-team.adoc
+++ b/downstream/modules/platform/proc-gw-add-admin-team.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-add-admin-team_{context}"]
+[id="proc-gw-add-admin-team"]
 
 = Adding administrators to a team
 
