--- a/downstream/modules/platform/proc-gw-adjust-mapping-order.adoc
+++ b/downstream/modules/platform/proc-gw-adjust-mapping-order.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="gw-adjust-mapping-order_{context}"]
+[id="gw-adjust-mapping-order"]
 
 = Adjusting the Mapping order
 
@@ -19,4 +19,4 @@ And, if the second map is of type `is_superuser` and the trigger is based on the
 The mapping precedence is determined by the order in which the mappings are listed.
 ====
 + 
-. After your authenticator maps are in the correct order, click btn:[Next] to xref:gw-review-auth-settings_gw-auth-wizard[Review the authentication settings].
+. After your authenticator maps are in the correct order, click btn:[Next] to xref:gw-review-auth-settings[Review the authentication settings].
