--- a/downstream/modules/platform/proc-gw-configure-auth-details.adoc
+++ b/downstream/modules/platform/proc-gw-configure-auth-details.adoc
@@ -1,10 +1,10 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="gw-configure-auth-details_{context}"]
+[id="gw-configure-auth-details"]
 
 = Configuring authentication details
 
-Different authenticator plugins require different types of information. See the respective sections in xref:gw-config-authentication-type_gw-auth-type[Configuring an authentication type] for the required details.
+Different authenticator plugins require different types of information. See the respective sections in xref:gw-config-authentication-type[Configuring an authentication type] for the required details.
 
 For all authentication types you can enter a *Name*, *Additional Authenticator Fields* and *Create Objects*. 
 
@@ -37,4 +37,4 @@ If *Remove Users* is enabled, the `is_superuser` permission will be removed from
 +
 If *Remove Users* is disabled, the `is_superuser` permission will not be removed from the user, the authenticator maps will not have an opinion as to whether it should be there or not so after login the user will have the `is_superuser` permission.
 +
-. Click btn:[Next] to xref:gw-define-rules-triggers_gw-auth-wizard[Define authenticator mappings].
+. Click btn:[Next] to xref:gw-define-rules-triggers[Define authenticator mappings].
