--- a/downstream/modules/platform/proc-gw-create-roles.adoc
+++ b/downstream/modules/platform/proc-gw-create-roles.adoc
@@ -1,26 +1,18 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-create-roles_{context}"]
+[id="proc-gw-create-roles"]
 
 = Creating a role
 
-ifdef::auto-exec[]
-{ControllerNameStart} provides a set of predefined roles with permissions sufficient for standard automation execution tasks. It is also possible to configure custom roles, and assign one or more permission filters to them. Permission filters define the actions allowed for a specific resource type.
-endif::auto-exec[]
-
-ifdef::auto-dec[]
-{EDAName} provides a set of predefined roles with permissions sufficient for standard automation decision tasks. It is also possible to configure custom roles, and assign one or more permission filters to them. Permission filters define the actions allowed for a specific resource type.
-endif::auto-dec[]
+{PlatformNameShort} services provide a set of predefined roles with permissions sufficient for standard automation tasks. It is also possible to configure custom roles, and assign one or more permission filters to them. Permission filters define the actions allowed for a specific resource type. 
 
 .Procedure
 
 . From the navigation panel, select {MenuAMRoles}.
-ifdef::auto-exec[]
-. Select the *Automation Execution* tab.
-endif::auto-exec[]
-ifdef::auto-dec[]
-. Select the *Automation Decisions* tab.
-endif::auto-dec[]
+. Select a tab for the component resource for which you want to create custom roles.
++
+include::snippets/snip-gw-roles-note-multiple-components.adoc[]
++
 . Click btn:[Create role].
 . Provide a *Name* and optionally include a *Description* for the role.
 . Select a *Content type*.
