--- a/downstream/modules/platform/proc-gw-define-rules-triggers.adoc
+++ b/downstream/modules/platform/proc-gw-define-rules-triggers.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="gw-define-rules-triggers_{context}"]
+[id="gw-define-rules-triggers"]
 
 = Defining authentication mapping rules and triggers
 
@@ -32,7 +32,7 @@ Attribute:: The trigger should fire based on a user having some combination of a
 . Enter a unique rule *Name* to identify the rule.
 . Select a *Trigger* from the list. See Triggers for more details.
 . Repeat steps 1-3 to add additional triggers to the authenticator.
-. Click btn:[Next] to optionally xref:gw-adjust-mapping-order_gw-auth-wizard[Adjust the Mapping order].
+. Click btn:[Next] to optionally xref:gw-adjust-mapping-order[Adjust the Mapping order].
 +
 [NOTE]
 ====
