--- a/downstream/modules/platform/proc-gw-delete-organization.adoc
+++ b/downstream/modules/platform/proc-gw-delete-organization.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-delete-organization_{context}"]
+[id="proc-gw-delete-organization"]
 
 = Deleting an organization
 
