--- a/downstream/modules/platform/proc-gw-organizations-exec-env.adoc
+++ b/downstream/modules/platform/proc-gw-organizations-exec-env.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-organizations-exec-env_{context}"]
+[id="proc-gw-organizations-exec-env"]
 
 = Working with {ExecEnvShort}s
 
