--- a/downstream/modules/platform/proc-gw-remove-roles-team.adoc
+++ b/downstream/modules/platform/proc-gw-remove-roles-team.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-remove-roles-team_{context}"]
+[id="proc-gw-remove-roles-team"]
 
 = Removing roles from a team
 
