--- a/downstream/modules/platform/proc-gw-review-auth-settings.adoc
+++ b/downstream/modules/platform/proc-gw-review-auth-settings.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="gw-review-auth-settings_{context}"]
+[id="gw-review-auth-settings"]
 
 = Reviewing the authentication settings
 
