--- a/downstream/modules/platform/proc-gw-team-add-user.adoc
+++ b/downstream/modules/platform/proc-gw-team-add-user.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-team-add-user_{context}"]
+[id="proc-gw-team-add-user"]
 
 = Adding users to a team
 To add a user to a team, the user must already have been created. For more information, see (TBD - Create a user). Adding a user to a team adds them as a member only. Use the *Roles* tab to assign a role for the user on different resources to the selected team.
