--- a/downstream/modules/platform/proc-gw-team-remove-user.adoc
+++ b/downstream/modules/platform/proc-gw-team-remove-user.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-team-remove-user_{context}"]
+[id="proc-gw-team-remove-user"]
 
 = Removing users from a team
 
