--- a/downstream/modules/platform/proc-gw-user-access-resources.adoc
+++ b/downstream/modules/platform/proc-gw-user-access-resources.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-user-access-resources_{context}"]
+[id="proc-gw-user-access-resources"]
 
 = Providing user access to a resource
 
