--- a/downstream/modules/platform/proc-gw-users-list-view.adoc
+++ b/downstream/modules/platform/proc-gw-users-list-view.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-users-list-view_{context}"]
+[id="proc-gw-users-list-view"]
 
 = Users list view
 
