--- a/downstream/assemblies/platform/assembly-gw-settings.adoc
+++ b/downstream/assemblies/platform/assembly-gw-settings.adoc
@@ -1,10 +1,8 @@
 :_mod-docs-content-type: ASSEMBLY
 
-[id="assembly-gw-settings_{context}"]
+[id="assembly-gw-settings"]
 
 = Configuring {PlatformNameShort}
-
-:context: gw-settings
 
 You can configure Ansible Automation platform from the *Settings* menu using the following selections:
 
@@ -18,7 +16,7 @@ You can configure Ansible Automation platform from the *Settings* menu using the
 The other selections available from the *Settings* menu are specific to automation execution. For more information, refer to the link:https://{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/controller-config[TitleControllerAdminGuide] guide.
 ====
 
-include::/platform/proc-controller-configure-subscriptions.adoc[leveloffset=+1]
-include::/platform/proc-settings-platform-gateway.adoc[leveloffset=+1]
-include::/platform/proc-settings-user-preferences.adoc[leveloffset=+1]
-include::/platform/proc-settings-troubleshooting.adoc[leveloffset=+1]
+include::platform/proc-controller-configure-subscriptions.adoc[leveloffset=+1]
+include::platform/proc-settings-platform-gateway.adoc[leveloffset=+1]
+include::platform/proc-settings-user-preferences.adoc[leveloffset=+1]
+include::platform/proc-settings-troubleshooting.adoc[leveloffset=+1]
