--- a/downstream/modules/platform/con-gw-create-authentication.adoc
+++ b/downstream/modules/platform/con-gw-create-authentication.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: CONCEPT
 
-[id="gw-create-authentication_{context}"]
+[id="gw-create-authentication"]
 
 = Creating an authentication method
 
@@ -8,14 +8,14 @@ The *Create Authentication* wizard guides you through the steps to create a new 
 
 There are 5 procedures involved in creating an authenticator, including:
 
-. xref:gw-select-auth-type_gw-auth-wizard[Authentication type], where you will select the type of authenticator plugin you want to configure.
-. xref:gw-configure-auth-details_gw-auth-wizard[Authentication details], where you will configure the authentication details for the plugin you selected.
-. xref:gw-define-rules-triggers_gw-auth-wizard[Mapping], where you will define mapping rule types and triggers to control access to the system.
-. xref:gw-adjust-mapping-order_gw-auth-wizard[Mapping order], where you can define the mapping precedence.
+. xref:gw-select-auth-type[Authentication type], where you will select the type of authenticator plugin you want to configure.
+. xref:gw-configure-auth-details[Authentication details], where you will configure the authentication details for the plugin you selected.
+. xref:gw-define-rules-triggers[Mapping], where you will define mapping rule types and triggers to control access to the system.
+. xref:gw-adjust-mapping-order[Mapping order], where you can define the mapping precedence.
 +
 [NOTE]
 ====
 Mapping order is only available if there are one or more authenticator maps defined.
 ====
 +
-. xref:gw-review-auth-settings_gw-auth-wizard[Review], where you can review and confirm the authentication settings before creating the authentication method.
+. xref:gw-review-auth-settings[Review], where you can review and confirm the authentication settings before creating the authentication method.
