--- a/downstream/modules/platform/proc-controller-set-up-SAML.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-SAML.adoc
@@ -65,7 +65,7 @@ For more information and additional options, see link:https://github.com/SAML-To
 +
 . Optional: In the *SAML IDP to extra_data attribute mapping* field, enter values to map  IDP attributes to extra_data attributes. For more information, see link:https://python-social-auth.readthedocs.io/en/latest/backends/saml.html#advanced-settings[advanced SAML settings].
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc.[]
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
 +
 . Click btn:[Next].
 
