--- a/downstream/modules/platform/proc-gw-delete-roles.adoc
+++ b/downstream/modules/platform/proc-gw-delete-roles.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-delete-roles_{context}"]
+[id="proc-gw-delete-roles"]
 
 = Deleting a role
 
@@ -9,11 +9,9 @@ Built in roles can not be deleted, however, you can delete custom roles from the
 .Procedure
 
 . From the navigation panel, select {MenuAMRoles}.
-ifdef::auto-exec[]
-. Select the *Automation Execution* tab.
-endif::auto-exec[]
-ifdef::auto-dec[]
-. Select the *Automation Decisions* tab.
-endif::auto-dec[]
+. Select a tab for the component resource for which you want to create custom roles.
++
+include::snippets/snip-gw-roles-note-multiple-components.adoc[]
++
 . Click the *More Actions* icon *{MoreActionsIcon}* next to the role you want and select *Delete role*.
 . To delete roles in bulk, select the roles you want to delete from the *Roles* list view, click the *More Actions* icon *{MoreActionsIcon}*, and select *Delete selected roles*.
