--- a/downstream/modules/platform/proc-gw-edit-roles.adoc
+++ b/downstream/modules/platform/proc-gw-edit-roles.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-edit-roles_{context}"]
+[id="proc-gw-edit-roles"]
 
 = Editing a role
 
@@ -9,11 +9,9 @@ Built in roles can not be changed, however, you can modify custom roles from the
 .Procedure
 
 . From the navigation panel, select {MenuAMRoles}.
-ifdef::auto-exec[]
-. Select the *Automation Execution* tab.
-endif::auto-exec[]
-ifdef::auto-dec[]
-. Select the *Automation Decisions* tab.
-endif::auto-dec[]
+. Select a tab for the component resource for which you want to create custom roles.
++
+include::snippets/snip-gw-roles-note-multiple-components.adoc[]
++
 . Click the *Edit role* icon image:leftpencil.png[Edit,15,15] next to the role you want and modify the role settings as needed.
 . Click btn:[Save role] to save your changes.
