--- a/downstream/modules/platform/proc-gw-remove-roles-user.adoc
+++ b/downstream/modules/platform/proc-gw-remove-roles-user.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-remove-roles-user_{context}"]
+[id="proc-gw-remove-roles-user"]
 
 = Removing roles from a user
 You can remove roles from a user by selecting the *-* icon next to the resource. This launches a confirmation dialog, asking you to confirm the removal.
