--- a/downstream/modules/platform/proc-gw-roles.adoc
+++ b/downstream/modules/platform/proc-gw-roles.adoc
@@ -1,27 +1,17 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-roles_{context}"]
+[id="proc-gw-roles"]
 
-ifdef::auto-exec[]
-= Automation execution roles
+= Displaying roles
 
-You can display the set of roles assigned for automation execution resources by using *Access Management*. From here, you can also sort or search the roles list, and create, edit, or delete automation execution roles.
-endif::auto-exec[]
-
-ifdef::auto-dec[]
-= Automation decision roles
-
-You can display the set of roles assigned for automation decision resources by using *Access Management*. From here, you can also sort or search the roles list, and create, edit, or delete automation decision roles.
-endif::auto-dec[]
+You can display the roles assigned for component resources from the menu:Access Management[] menu.
 
 .Procedure
 
 . From the navigation panel, select {MenuAMRoles}.
-ifdef::auto-exec[]
-. Select the *Automation Execution* tab.
-endif::auto-exec[]
-ifdef::auto-dec[]
-. Select the *Automation Decisions* tab.
-endif::auto-dec[]
+. Select a tab for the component resource for which you want to create custom roles.
++
+include::snippets/snip-gw-roles-note-multiple-components.adoc[]
++
 . From the table header, you can sort the list of roles by using the arrows for *Role*, *Description*, *Created* and *Editable* or by making sort selections in the *Sort* list.
 . You can filter the list of roles by selecting *Name* or *Editable* from the filter list and clicking the arrow.
