--- a/downstream/modules/platform/proc-gw-team-access-resources.adoc
+++ b/downstream/modules/platform/proc-gw-team-access-resources.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-gw-team-access_{context}"]
+[id="proc-gw-team-access"]
 
 = Providing team access to a resource
 You can grant users access based on their team membership. When you add a user as a member of a team, they inherit access to the roles and resources defined for that team.
