am-formatting-1 - Fixed remaining errors preventing successful builds

--- a/downstream/assemblies/platform/assembly-gw-configure-authentication.adoc
+++ b/downstream/assemblies/platform/assembly-gw-configure-authentication.adoc
@@ -28,7 +28,11 @@ include::platform/proc-gw-define-rules-triggers.adoc[leveloffset=+2]
 
 include::platform/proc-gw-adjust-mapping-order.adoc[leveloffset=+2]
 
+include::platform/proc-gw-review-auth-settings.adoc[leveloffset=+2]
+
 include::assembly-gw-config-authentication-type.adoc[leveloffset=+1]
+
+include::assembly-gw-managing-authentication.adoc[leveloffset=+1]
 
 
 ifdef::parent-context[:context: {parent-context}]
