--- a/downstream/modules/platform/proc-custom-logos-images.adoc
+++ b/downstream/modules/platform/proc-custom-logos-images.adoc
@@ -1,6 +1,6 @@
 [id="proc-custom-logos-images"]
 
-//To be added to Donna's AAP/UI document for 2.5 
+//[ddacosta]Obsolete, this information is provided in the proc-settings-platform-gateway.adoc module now.
 
 = Setting a custom logo
 
