--- a/downstream/modules/platform/proc-controller-creating-a-user.adoc
+++ b/downstream/modules/platform/proc-controller-creating-a-user.adoc
@@ -4,9 +4,9 @@
 
 = Creating a user
 
-You can assign two types of users: 
+There are three types of users in {PlatformNameShort}: 
 
-Normal user:: Normal users have read and write access limited to the resources (such as inventory, projects, and job templates) for which that user has been granted the appropriate roles and privileges.
+Normal user:: Normal users have read and write access limited to the resources (such as inventory, projects, and job templates) for which that user has been granted the appropriate roles and privileges. Normal users are the default type of user.
 {PlatformNameShort} Administrator:: An administrator (also known as a Superuser) has full system administration privileges — with full read and write privileges over the entire installation. An administrator is typically responsible for managing all aspects of and delegating responsibilities for day-to-day work to various users.
 {PlatformNameShort} Auditor:: Auditors have read-only capability for all objects within the environment.
 
@@ -31,4 +31,4 @@ If the user is not newly-created, the details screen displays the last login act
 ====
 
 If you log in as yourself, and view the details of your user profile, you can manage tokens from your user profile by selecting the *Tokens* tab.
-For more information, see xref:proc-controller-apps-create-tokens[Adding a token].
+// [ddacosta - Removing until OAuth and Applications content is completed.] For more information, see xref:proc-controller-apps-create-tokens[Adding a token].
