am-formatting-1 - Added peer review fixes

--- a/downstream/modules/platform/proc-controller-add-organization-user.adoc
+++ b/downstream/modules/platform/proc-controller-add-organization-user.adoc
@@ -3,7 +3,7 @@
 = Adding a user to an organization
 
 You can provide a user with access to an organization by adding them to the organization and managing the roles associated with the user. To add a user to an organization, the user must already exist. For more information, see xref:proc-controller-creating-a-user[Creating a user]. 
-To add roles for a user, the role must already exist. See xref:proc-gw-create-roles[Creating a roles] for more information.
+To add roles for a user, the role must already exist. See xref:proc-gw-create-roles[Creating a role] for more information.
 
 .Procedure
 . From the navigation panel, select {MenuAMOrganizations}.
