--- a/downstream/modules/platform/proc-gw-add-team-organization.adoc
+++ b/downstream/modules/platform/proc-gw-add-team-organization.adoc
@@ -5,7 +5,7 @@
 = Adding a team to an organization
 
 You can provide team access to an organization by adding roles to the team. To add roles to a team, the team must already exist in the organization. For more information, see xref:proc-controller-creating-a-team[Creating a team].
-To add roles for a team, the role must already exist. See xref:proc-gw-create-roles[Creating a roles] for more information.
+To add roles for a team, the role must already exist. See xref:proc-gw-create-roles[Creating a role] for more information.
 
 .Procedure
 
