am-formatting-1 - Fix the formatting for the Access management and authentication guide (#1805)
* am-formatting-1 - Fixing issues causing build errors

* am-formatting-1 - Fixed remaining errors preventing successful builds

* am-formatting-1 - Added peer review fixes

--- a/downstream/assemblies/platform/assembly-gw-configure-authentication.adoc
+++ b/downstream/assemblies/platform/assembly-gw-configure-authentication.adoc
@@ -2,11 +2,9 @@ ifdef::context[:parent-context: {context}]
 
 :_mod-docs-content-type: ASSEMBLY
 
-[id="gw-configure-authentication_{context}"]
+[id="gw-configure-authentication"]
 
 = Configuring authentication in the {PlatformNameShort}
-
-:context: gw-auth-wizard
 
 Using the authentication settings in {PlatformNameShort}, you can set up a simplified login through several authentication methods, such as LDAP and SAML
 Depending on the authentication method you select, you will be required to enter different information to complete the configuration. Be sure to include all the information required for your configuration needs.
@@ -30,7 +28,11 @@ include::platform/proc-gw-define-rules-triggers.adoc[leveloffset=+2]
 
 include::platform/proc-gw-adjust-mapping-order.adoc[leveloffset=+2]
 
+include::platform/proc-gw-review-auth-settings.adoc[leveloffset=+2]
+
 include::assembly-gw-config-authentication-type.adoc[leveloffset=+1]
+
+include::assembly-gw-managing-authentication.adoc[leveloffset=+1]
 
 
 ifdef::parent-context[:context: {parent-context}]
