Adding post install steps for VM install
Adding steps for VM install with hub and removing operator and container based steps

VM - New content to install and configure EDA 2.5 with controller 2.4

https://issues.redhat.com/browse/AAP-23518

Affects `titles/eda-controller/eda-controller-install`

--- a/downstream/assemblies/platform/assembly-VM-eda-controller-install.adoc
+++ b/downstream/assemblies/platform/assembly-VM-eda-controller-install.adoc
@@ -7,3 +7,4 @@ If you have an existing {PlatformNameShort} 2.4 Virtual Machine (VM)-based insta
 If you do not have an existing {PlatformNameShort} 2.4 VM-based installation of {ControllerName}, see the link:{BaseURL}/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_installation_guide/index[Red Hat Ansible Automation Platform installation guide], ensuring that you use an {PlatformNameShort} 2.4 installer.
 
 include::platform/proc-VM-install-eda-controller.adoc[leveloffset=+1]
+include::platform/con-VM-install-eda-post-steps.adoc[leveloffset=+1]
