--- a/downstream/titles/eda-controller/eda-controller-install/master.adoc
+++ b/downstream/titles/eda-controller/eda-controller-install/master.adoc
@@ -8,16 +8,18 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Install and configure Event-Driven Ansible 1.1 with automation controller 4.4 or 4.5
+= Using Event-Drive Ansible 2.5 with Ansible Automation Platform 2.4 
 
 You can configure a new installation of {EDAcontroller} 1.1 with {ControllerName} 4.4 or 4.5, which is considered a general availability release fully supported by Red Hat. 
 {ControllerNameStart} 4.4 and 4.5 were released as part of {PlatformNameShort} 2.4.
 
 Upgrading to {EDAcontroller} 1.1 from an earlier release is unsupported at this time.
 
+This guide shows you how to install and configure Event-Driven Ansible 1.1 to work with automation controller 4.4 or 4.5 for a Virtual Machine (VM)-based installation. 
+
 include::{Boilerplate}[]
 
-include::platform/assembly-container-based-install.adoc[leveloffset=+1]
-include::platform/assembly-operator-eda-controller-install.adoc[leveloffset=+1]
+//include::platform/assembly-container-based-install.adoc[leveloffset=+1]
+//include::platform/assembly-operator-eda-controller-install.adoc[leveloffset=+1]
 include::platform/assembly-VM-eda-controller-install.adoc[leveloffset=+1]
 include::platform/assembly-eda-controller-post-install.adoc[leveloffset=+1]
