Fixing typo in title

--- a/downstream/titles/eda-controller/eda-controller-install/master.adoc
+++ b/downstream/titles/eda-controller/eda-controller-install/master.adoc
@@ -8,7 +8,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Using Event-Drive Ansible 2.5 with Ansible Automation Platform 2.4 
+= Using Event-Driven Ansible 2.5 with Ansible Automation Platform 2.4 
 
 You can configure a new installation of {EDAcontroller} 1.1 with {ControllerName} 4.4 or 4.5, which is considered a general availability release fully supported by Red Hat. 
 {ControllerNameStart} 4.4 and 4.5 were released as part of {PlatformNameShort} 2.4.
