Add Event filter chapter to EDA user guide
Improve documentation for event filter plugins to include authoring them

https://issues.redhat.com/browse/AAP-29016

Affects `titles/eda/eda-user-guide`

--- a/downstream/titles/eda/eda-user-guide/master.adoc
+++ b/downstream/titles/eda/eda-user-guide/master.adoc
@@ -23,4 +23,5 @@ include::eda/assembly-eda-set-up-rhaap-credential.adoc[leveloffset=+1]
 include::eda/assembly-eda-rulebook-activations.adoc[leveloffset=+1]
 include::eda/assembly-eda-rule-audit.adoc[leveloffset=+1]
 include::eda/assembly-eda-performance-tuning.adoc[leveloffset=+1]
+include::eda/assembly-eda-event-filter-plugins.adoc[leveloffset=+1]
 include::eda/assembly-eda-logging-strategy.adoc[leveloffset=+1]
