Further edits to rulebook act. chapter

--- a/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
@@ -7,11 +7,10 @@
 * You are logged in to the {PlatformNameShort} Dashboard as a Content Consumer.
 * You have set up a project.
 * You have set up a decision environment.
-* You have set up an {ControllerName} token.
 
 .Procedure
 // [ddacosta] I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
-. Log in to the {PlatformNameShort} Dashboard.
+. Log in to the {PlatformNameShort}.
 . Navigate to the {MenuADRulebookActivations}.
 . Click btn:[Create rulebook activation]. 
 . Insert the following:
@@ -56,7 +55,7 @@ The content would be equivalent to the file passed through the `--vars` flag of 
 
 Your rulebook activation is now created and can be managed on the *Rulebook Activations* page.
 
-After saving the new rulebook activation, the rulebook activation's details page is displayed, with either a *Pending*, *Running*, or *Failed* status
+After saving the new rulebook activation, the rulebook activation's details page is displayed, with either a *Pending*, *Running*, or *Failed* status.
 From there or the *Rulebook Activations* list view, you can restart or delete it.
 
 [NOTE]
