AAP-22022 Credential content updates for 2.5

--- a/downstream/assemblies/eda/assembly-eda-credentials.adoc
+++ b/downstream/assemblies/eda/assembly-eda-credentials.adoc
@@ -1,8 +1,12 @@
 [id="eda-credentials"]
 
-= Setting up credentials
+= Credentials
 
 You can use credentials and credential types to define and store secrets that can be used for authentication purposes with resources, such as decision environments, rulebook activations and projects for {EDAcontroller}, and inventories and projects for {ControllerName}.
+
+Credentials authenticate users when launching jobs against machines and importing project content from a version control system.
+
+You can grant users and teams the ability to use these credentials without exposing the credential to the user. If a user moves to a different team or leaves the organization, you do not have to rekey all of your systems just because that credential was previously available.
 
 
 include::eda/con-credentials-list-view.adoc[leveloffset=+1]
