--- a/downstream/modules/eda/con-credentials-list-view.adoc
+++ b/downstream/modules/eda/con-credentials-list-view.adoc
@@ -2,11 +2,15 @@
 
 = Credentials list view
 
-On the *Credentials* page, you can view the list of created credentials that you have created along with the *Type* of credential.
+When you log in to the {PlatformNameShort} and select {MenuADCredentials}, the Credentials page has a pre-loaded *Decision Environment Container Registry* credential. When you create your own credentials, they will be added to this list view. .
 
-From the menu bar, you can search for credentials in the *Name* field. 
+From the menu bar, you can search for credentials in the *Name* search field. 
 
 You also have the following options in the menu bar:
 
-* Choose which columns are shown in the list view by clicking btn:[Manage columns].
+* Choose how fields are shown in the list view by clicking the btn:[Manage columns] icon. You have four options in which you can arrange your fields: 
+** *Column* -  Shows the column in the table.
+** *Description* - Shows the column when the item is expanded as a full width description.
+** *Expanded* - Shows the column when the item is expanded as a detail.
+** *Hidden* - Hides the column. 
 * Choose between a btn:[List view] or a btn:[Card view], by clicking the icons.
