--- a/downstream/modules/eda/proc-eda-edit-credential.adoc
+++ b/downstream/modules/eda/proc-eda-edit-credential.adoc
@@ -2,6 +2,8 @@
 
 = Editing a credential
 
+You can edit existing credentials to ensure the appropriate level of access for your organization.
+
 .Procedure
 
 . Edit the credential by using one of these methods:
