--- a/stories/topics/con-saas-application-monitoring-and-customer-audits.adoc
+++ b/stories/topics/con-saas-application-monitoring-and-customer-audits.adoc
@@ -2,4 +2,4 @@
 = Application monitoring and customer audits
 
 The {PlatformNameShort} activity stream provides detailed information about access to {PlatformNameShort} and how you can use it. 
-If you need to retain this information for auditing or compliance reasons, we encourage you to export logs to supported logging services to retain and query logs.
+If you need to retain this information for auditing or compliance reasons, you must export logs to supported logging services to retain and query logs.
