--- a/stories/topics/con-saas-connectivity.adoc
+++ b/stories/topics/con-saas-connectivity.adoc
@@ -8,5 +8,5 @@ In general, the execution plane should be able to communicate to the control pla
 * Push: A configurable firewall port must be opened within a customer’s remote networks to allow for {PlatformNameShort} to push information to execution nodes.
 
 You can configure automation mesh nodes behind firewalls, proxy servers, and similar services. 
-These services need to route or proxy traffic originating from {PlatformNameShort} without altering headers, payload, or other information that would affect functionality of the automation mesh.
+These services route or proxy traffic originating from {PlatformNameShort} without altering headers, payload, or other information that would affect functionality of the automation mesh.
 
