--- a/stories/topics/con-saas-shape.adoc
+++ b/stories/topics/con-saas-shape.adoc
@@ -16,7 +16,7 @@ You can use this as a baseline to consider the right machine shapes for your env
 You must monitor and tune the execution plane based on the needs of your organization’s automation.
 * If you have automation in fewer locations (such as geographies or other clouds) must create a mesh with fewer VMs that can be scaled vertically. 
 Most clouds and hypervisors enable the ability to change shapes with minimal downtime.
-* If you have CPU or RAM intensive automation, you will require larger machine shapes.
+* If you require CPU or RAM intensive automation, you will require larger machine shapes.
 * If you have automation that spans multiple locations (such as geographies or other clouds), create a mesh with nodes that enable connectivity to those locations.
 * You can consider the use of different CPU architectures, like ARM, and reserved instances to reduce the cost of the execution plane.
 * If you are interested in configuring redundancy in the automation mesh, you  should configure at least two mesh nodes of the same shape in the same region, but in different availability zones, with each machine connected to both mesh ingress hop nodes.
