--- a/stories/topics/con-saas-connectivity.adoc
+++ b/stories/topics/con-saas-connectivity.adoc
@@ -2,7 +2,7 @@
 
 = Connectivity
 
-In general, the execution plane should be able to communicate to the control plane when the following conditions are met:
+In general, the execution plane is able to communicate to the control plane when the following conditions are met:
 
 * Polling (mesh-ingress): Execution nodes must be able to route stateful egress traffic to the domain of the {PlatformNameShort} deployment over port 443.
 * Push: A configurable firewall port must be opened within a customer’s remote networks to allow for {PlatformNameShort} to push information to execution nodes.
