--- a/stories/topics/con-saas-sre-access-and-management.adoc
+++ b/stories/topics/con-saas-sre-access-and-management.adoc
@@ -1,2 +1,13 @@
 [id="con-saas-sre-access-and-management"]
 = SRE access and management
+
+Site Reliability Engineering (SRE) access is specific to the infrastructure and services running {PlatformNameShort}. 
+Red Hat does not access the {PlatformNameShort} interfaces or APIs except for extenuating circumstances, such as a support engagement that requires it. 
+In such cases, access is provided by the customer to the SRE team for troubleshooting those issues.
+
+SRE access to control plane resources is limited to operations that must be performed by a person and cannot be automated. 
+In such cases, any access to a particular control plane follows a request-and-approval process, and the access is audited, to ensure that only permitted personnel have access to perform these operations.
+
+The following describes the process that SREs use to access resources and the audit data that is captured whenever an operation against resources is performed.
+
+* *need steps*
