AAP-30336 remove subscription info from operations guide

--- a/downstream/archive/archived-assemblies/platform/assembly-aap-manifest-files.adoc
+++ b/downstream/archive/archived-assemblies/platform/assembly-aap-manifest-files.adoc
@@ -1,5 +1,5 @@
 
-
+// emurtoug archived this file to avoid duplication of subscription content within Access mangement and authentication
 ifdef::context[:parent-context: {context}]
 
 
