--- a/downstream/titles/aap-operations-guide/master.adoc
+++ b/downstream/titles/aap-operations-guide/master.adoc
@@ -14,7 +14,7 @@ After installing Red Hat Ansible Automation Platform, your system might need ext
 
 include::{Boilerplate}[]
 include::platform/assembly-aap-activate.adoc[leveloffset=+1]
-include::platform/assembly-aap-manifest-files.adoc[leveloffset=+1]
+// emurtoug removed this assembly to avoid duplication within Access management and authentication include::platform/assembly-aap-manifest-files.adoc[leveloffset=+1]
 //ifowler assembly transferred from installation guide as part of AAP-18700
 include::platform/assembly-platform-whats-next.adoc[leveloffset=+1]
 include::platform/assembly-configuring-proxy-support.adoc[leveloffset=+1]
