AAP-29296 removed subscription info (#1816)
* AAP-29296 removed subscription info

* AAP-29296 removed subscription info

* AAP-29296 updated comments

* AAP-29296 updated comments

--- a/downstream/archive/archived-assemblies/platform/assembly-attaching-subscriptions.adoc
+++ b/downstream/archive/archived-assemblies/platform/assembly-attaching-subscriptions.adoc
@@ -1,4 +1,4 @@
-
+// emurtoug archived this assembly from the Planning guide to avoid duplication of subscription content added to Access management and authentication
 
 [id="proc-attaching-subscriptions_{context}"]
 
