--- a/downstream/titles/aap-planning-guide/master.adoc
+++ b/downstream/titles/aap-planning-guide/master.adoc
@@ -20,7 +20,7 @@ include::platform/assembly-aap-architecture.adoc[leveloffset=+1]
 include::platform/assembly-aap-platform-components.adoc[leveloffset=+1]
 include::platform/assembly-system-requirements.adoc[leveloffset=+1]
 include::platform/assembly-network-ports-protocols.adoc[leveloffset=+1]
-include::platform/assembly-attaching-subscriptions.adoc[leveloffset=+1]
+// emurtough removed subscription info to avoid duplication within Access management and authentication include::platform/assembly-attaching-subscriptions.adoc[leveloffset=+1]
 include::platform/assembly-choosing-obtaining-installer.adoc[leveloffset=+1]
 include::platform/assembly-inventory-introduction.adoc[leveloffset=+1]
 include::platform/assembly-supported-installation-scenarios.adoc[leveloffset=+1]
