am-formatting-2 - Fixing issues with document structure/chapter breakdown

--- a/downstream/assemblies/platform/assembly-gw-config-authentication-type.adoc
+++ b/downstream/assemblies/platform/assembly-gw-config-authentication-type.adoc
@@ -4,9 +4,10 @@ ifdef::context[:parent-context: {context}]
 
 [id="gw-config-authentication-type"]
 
-= Configuring authentication in the {PlatformNameShort}
+= Configuring an authentication type
 
-Ansible Automation Platform provides multiple authenticator plugins that you can configure to simplify the login experience for your organization. These are the authenticator plugins that are provided:
+{PlatformNameShort} provides multiple authenticator plugins that you can configure to simplify the login experience for your organization. These are the authenticator plugins that are provided:
+
 * xref:gw-local-authentication[Local] 
 * xref:controller-set-up-LDAP[LDAP] 
 * xref:controller-set-up-SAML[SAML] 
@@ -23,7 +24,7 @@ Ansible Automation Platform provides multiple authenticator plugins that you can
 * xref:proc-controller-github-enterprise-org-settings[GitHub enterprise organization]
 * xref:proc-controller-github-enterprise-team-settings[GitHub enterprise team]
 
-include::platform/proc-gw-local-authentication.adoc[leveloffest=+1]
+include::platform/proc-gw-local-authentication.adoc[leveloffset=+1]
 
 include::platform/proc-controller-set-up-LDAP.adoc[leveloffset=+1]
 
@@ -35,7 +36,7 @@ include::platform/proc-controller-set-up-azure.adoc[leveloffset=+1]
 
 include::platform/proc-controller-google-oauth2-settings.adoc[leveloffset=+1]
 
-include::platform/proc-controller-set-up-generic-oidc.adoc[leveloffest=+1]
+include::platform/proc-controller-set-up-generic-oidc.adoc[leveloffset=+1]
 
 include::platform/proc-gw-config-keycloak-settings.adoc[leveloffset=+1]
 
