--- a/downstream/modules/eda/proc-eda-set-up-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential.adoc
@@ -2,35 +2,41 @@
 
 = Setting up credentials
 
-Create a credential to use with a private repository (GitHub or GitLab) or a private container registry.
+You can create a credential to use with a source plugin or a private container registry that you select. You can make your credential available to a team or individuals
 
-[IMPORTANT]
-====
-If you are using a GitHub or GitLab repository, use the `basic auth` method.
-Both SCM servers are officially supported.
-You can use any SCM provider that supports `basic auth`.
-====
+//[IMPORTANT]
+//====
+//If you are using a GitHub or GitLab repository, use the `basic auth` method.
+//Both SCM servers are officially supported.
+//You can use any SCM provider that supports `basic auth`.
+//====
 
 .Procedure
 // ddacosta: I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
 // Also, Credentials will be centrally defined at the platform level for 2.5. Steps here should be verified/rewritten as appropriate and possibly relocated to Authentication docs
-. Log in to the {EDAcontroller} Dashboard.
+. Log in to the {PlatformNameShort} Dashboard.
 . From the navigation panel, select {MenuADCredentials}.
 . Click btn:[Create credential].
 . Insert the following:
 +
 Name:: Insert the name.
 Description:: This field is optional.
-Credential type:: The options available are a GitHub personal access token, a GitLab personal access token, or a container registry.
-Username:: Insert the username.
-Token:: Insert a token that allows you to authenticate to your destination.
+Organization:: Click the list to select an organization or select *Default*.
+Credential type:: Select from five built-in credentials and event stream credentials.
 +
 [NOTE]
 ====
-If you are using a container registry, the token field can be a token or a password, depending on the registry provider.
-If you are using the {PlatformNameShort} hub registry, insert the password for that in the token field.
-====
-+
+When you select the credential type, the *Type Details* section is displayed with fields that are applicable for the credential type you chose.   
+==== 
+
+//[JMS] Deleting this note for now. Not sure it's still relevant with all of the new credential types added to the list. 
+//[NOTE]
+//====
+//If you are using a container registry, the token field can be a token or a password, depending on the registry provider.
+//If you are using the {PlatformNameShort} hub registry, insert the password for that in the token field.
+//====
+
+. Complete the fields that are applicable to the credential type you selected.
 . Click btn:[Create credential].
 
 After saving the credential, the credentials details page is displayed.
