--- a/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
@@ -1,6 +1,6 @@
-[id="eda-set-up-credential-types"]
+[id="eda-set-up-new-credential-types"]
 
-= Creating a credential type
+= Creating a new credential type
 
 You can create a credential type to use with a source plugin or a private container registry that you select. You can make your credential type available to a team or individuals.
 
