AAP-22022 Corrected syntax in new creating a credential type module

--- a/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
@@ -33,7 +33,6 @@ required:
   - password
 ----
 
-----
 +
 View more YAML examples at the link:https://yaml.org/spec/1.2.2/[YAML page].
 +
@@ -142,7 +141,7 @@ Credential Types can also generate temporary files to support `.ini` files or ce
 }
 ----
 +
-In this example, {EDAcontroller} writes a temporary file that has:
+In this example, {ControllerName} writes a temporary file that has:
 +
 [literal, options="nowrap" subs="+attributes"]
 ----
@@ -206,3 +205,6 @@ If the *Delete* option is disabled, this means that the credential type is being
 
 image:credential-types-new-listed-verify.png[Verify new credential type]
 
+.Additional resources
+
+For information about how to create a new credential, see xref:eda-set-up-credential[Setting up credentials].
