--- a/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
@@ -15,9 +15,9 @@ You can create a credential type to use with a source plugin or a private contai
 Name:: Insert the name.
 Description:: This field is optional.
 . In the *Input Configuration* field, specify an input schema that defines a set of ordered fields for that type. The format can be in YAML or JSON:
-
++
 *YAML*
-
++
 [literal, options="nowrap" subs="+attributes"]
 ----
 fields:
@@ -32,12 +32,12 @@ required:
   - username
   - password
 ----
-
++
 
 View more YAML examples at the link:https://yaml.org/spec/1.2.2/[YAML page].
-
++
 *JSON*
-
++
 [literal, options="nowrap" subs="+attributes"]
 ----
 {
@@ -57,55 +57,10 @@ View more YAML examples at the link:https://yaml.org/spec/1.2.2/[YAML page].
  "required": ["username", "password"]
 }
 ----
-
++
 View more JSON examples at link:https://www.json.org/json-en.html[The JSON website].
 
-The following configuration in JSON format shows each field and how they are used:
 
-[literal, options="nowrap" subs="+attributes"]
-----
-{
-  "fields": [{
-    "id": "api_token",    # required - a unique name used to reference the field value
-
-    "label": "API Token", # required - a unique label for the field
-
-    "help_text": "User-facing short text describing the field.",
-
-    "type": ("string" | "boolean")   # defaults to 'string'
-
-    "choices": ["A", "B", "C"]   # (only applicable to `type=string`)
-
-    "format": "ssh_private_key"  # optional, can be used to enforce data format validity 
-                                 for SSH private key data (only applicable to `type=string`)
-
-    "secret": true,       # if true, the field value will be encrypted
-
-    "multiline": false    # if true, the field should be rendered as multi-line for input entry
-                          # (only applicable to `type=string`)
-},{
-    # field 2...
-},{
-    # field 3...
-}],
-
-"required": ["api_token"]   # optional; one or more fields can be marked as required
-},
-----
-
-When `type=string`, fields can optionally specify multiple choice options:
-
-[literal, options="nowrap" subs="+attributes"]
-----
-{
-  "fields": [{
-      "id": "api_token",    # required - a unique name used to reference the field value
-      "label": "API Token", # required - a unique label for the field
-      "type": "string",
-      "choices": ["A", "B", "C"]
-  }]
-},
-----
 
 . In the *Injector Configuration* field, enter environment variables or extra variables that specify the values a credential type can inject.
 The format can be in YAML or JSON (see examples in the previous step).
@@ -114,6 +69,7 @@ The following configuration in JSON format shows each field and how they are use
 +
 [literal, options="nowrap" subs="+attributes"]
 ----
++
 {
   "file": {
       "template": "[mycloud]\ntoken={{ api_token }}"
@@ -185,7 +141,7 @@ The following is an example of referencing many files in a custom credential tem
 }
 ----
 
-. Click btn:[Save].
+. Click btn:[Create credential type].
 +
 Your newly created credential type is displayed on the list of credential types:
 +
