--- a/downstream/modules/eda/proc-eda-set-up-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential.adoc
@@ -2,7 +2,7 @@
 
 = Setting up credentials
 
-You can create a credential to use with a source plugin or a private container registry that you select. You can make your credential available to a team or individuals
+You can create a credential to use with a source plugin or a private container registry that you select. You can make your credential available to a team or individuals.
 
 //[IMPORTANT]
 //====
@@ -28,7 +28,7 @@ Credential type:: Select from five built-in credentials and event stream credent
 ====
 When you select the credential type, the *Type Details* section is displayed with fields that are applicable for the credential type you chose.   
 ==== 
-
++
 //[JMS] Deleting this note for now. Not sure it's still relevant with all of the new credential types added to the list. 
 //[NOTE]
 //====
