AAP-26519 adds ch 1 about automation calculator to Using automation analytics

--- a/downstream/modules/analytics/proc-view-template-details.adoc
+++ b/downstream/modules/analytics/proc-view-template-details.adoc
@@ -8,12 +8,15 @@
 
 You can view detailed information for each template in *Top templates* to learn more about the template's context in the calculation of automation savings.
 
-* Click the *Info* icon for a job template to view template details.
+* Click the expand option for a job template to view template details. Clicking on the template name will take you to the *Job Explorer* for that template.
 
 .Top template information is provided for the following:
-* *Total elapsed sum* - Total run time of the template.
-* *Success elapsed sum* - Total run time for successful template runs.
-* *Failed elapsed sum* - Total run time for failed template runs.
-* *Automation percentage* - The template accounts for this percentage of automation in your organization.
-* *Associated organizations* - The template runs against these organizations.
-* *Associated clusters* - {ControllerNameStart} clusters the template runs on.
+* Elapsed
+* Total org count
+* Template success rate
+* Host count
+* Total cluster count
+* Costs from failed hosts
+* Total count
+* Total inventory count
+* Monetary gain
