--- a/downstream/titles/analytics/job-explorer/master.adoc
+++ b/downstream/titles/analytics/job-explorer/master.adoc
@@ -12,4 +12,7 @@ include::attributes/attributes.adoc[]
 include::{Boilerplate}[]
 
 // Contents
-include::analytics/assembly-using-job-explorer.adoc[leveloffset=+1]
+include::analytics/assembly-evaluating-automation-return.adoc[leveloffset=+1]
+// include::analytics/assembly-automation-savings-planner.adoc[leveloffset=+1]
+// include::analytics/assembly-insights-reports.adoc[leveloffset=+1]
+// include::analytics/assembly-using-job-explorer.adoc[leveloffset=+1]
