AAP-22022 Added comments to update graphics in the credential type procedure

--- a/downstream/modules/eda/con-custom-credential-types.adoc
+++ b/downstream/modules/eda/con-custom-credential-types.adoc
@@ -2,7 +2,7 @@
 
 = Custom credential types
 
-As a system administrator, you can define a custom credential type in a standard format by using a YAML or JSON-like definition. You can define a custom credential type that works in ways similar to existing credential types. For example, a custom credential type can inject an API token for a third-party web service into an environment variable, for your rulebook or custom inventory script to consume.
+As a system administrator, you can define a custom credential type works in ways similar to existing credential types in a standard format using a YAML or JSON-like definition. For example, a custom credential type can inject an API token for a third-party web service into an environment variable for your rulebook or custom inventory script to consume.
 
 Each credential type displays its own unique configurations in the Input Configuration field and the Injector Configuration field, if applicable. Custom credentials support the following ways of injecting their authentication information:
 
@@ -10,6 +10,7 @@ Each credential type displays its own unique configurations in the Input Configu
 * Ansible extra variables
 * File-based templating, which means generating .ini or .conf files that contain credential values
 
+//[J.Self] Reviewers: please confirm if this is true. I borrowed it from automation controller content, per suggestions from several SMEs and one of our principal tech writers. I just want to confirm technical accuracy here, especially the last line as we might not have "machine credentials".
 You can attach one SSH and multiple cloud credentials to a job template. Each cloud credential must be of a different type. Only one of each type of credential is permitted. Vault credentials and machine credentials are separate entities.
 
 [NOTE]
@@ -34,7 +35,7 @@ The Input configuration has two attributes:
 
 Fields can have multiple properties, depending on the credential type you select.
 
-.Credential Types Field Properties
+.Input Configuration Field Properties
 [cols="a,a,a"]
 |===
 | Fields | Description | Mandatory (Y/N)
