--- a/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
@@ -97,7 +97,7 @@ Credential Types can also generate temporary files to support `.ini` files or ce
 }
 ----
 +
-In this example, {ControllerName} writes a temporary file that has:
+In this example, {EDAcontroller} writes a temporary file that has:
 +
 [literal, options="nowrap" subs="+attributes"]
 ----
@@ -144,6 +144,8 @@ The following is an example of referencing many files in a custom credential tem
 . Click btn:[Create credential type].
 +
 Your newly created credential type is displayed on the list of credential types:
+
+//[JMS] Replace image with updated version
 +
 image:credential-types-new-listed.png[New credential type]
 
@@ -159,6 +161,7 @@ If the *Delete* option is disabled, this means that the credential type is being
 
 * Verify that the newly created credential type can be selected from the *Credential Type* selection window when creating a new credential:
 
+//[JMS] Replace this image with up to date one, maybe?
 image:credential-types-new-listed-verify.png[Verify new credential type]
 
 .Additional resources
