AAP-22022 Fixed syntactical errors with code sections, etc.

--- a/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
@@ -2,7 +2,7 @@
 
 = Creating a new credential type
 
-You can create a credential type to use with a source plugin or a private container registry that you select. You can make your credential type available to a team or individuals.
+You can create a credential type to use with a source plugin or a private container registry that you select based on the supported, default credential types. You can make your credential type available to a team or individuals.
 
 
 .Procedure
@@ -69,7 +69,7 @@ The following configuration in JSON format shows each field and how they are use
 +
 [literal, options="nowrap" subs="+attributes"]
 ----
-+
+
 {
   "file": {
       "template": "[mycloud]\ntoken={{ api_token }}"
@@ -145,15 +145,15 @@ The following is an example of referencing many files in a custom credential tem
 +
 Your newly created credential type is displayed on the list of credential types:
 
-//[JMS] Replace image with updated version
 +
 image:credential-types-new-listed.png[New credential type]
+//[JMS] Replace image with EDA version
 
-. Click the Edit image:leftpencil.png[Edit,15,15] icon to modify the credential type options.
+. Click the btn:[Edit credential type] image:leftpencil.png[Edit,15,15] icon to modify the credential type options.
 +
 [NOTE]
 ====
-In the *Edit* screen, you can modify the details or delete the credential.
+On the *Edit* page, you can modify the details or delete the credential.
 If the *Delete* option is disabled, this means that the credential type is being used by a credential, and you must delete the credential type from all the credentials that use it before you can delete it. 
 ====
 
