--- a/downstream/modules/eda/con-custom-credential-types.adoc
+++ b/downstream/modules/eda/con-custom-credential-types.adoc
@@ -16,7 +16,7 @@ You can attach one SSH and multiple cloud credentials to a job template. Each cl
 [NOTE]
 ====
 * When creating a new credential type, you must avoid collisions in the `extra_vars`, `env``, and file namespaces.
-* Environment variable or extra variable names must not start with *ANSIBLE_* because they are reserved.
+* Environment variable or extra variable names must not start with *EDA_* because they are reserved.
 * You must have System administrator (superuser) permissions to be able to create and edit a credential type and to be able to view the *Injector configuration* field.
 ====
 
